--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xe-web-crm",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,6 +24,7 @@
     "@angular/router": "^18.2.0",
     "@ckeditor/ckeditor5-angular": "^9.1.0",
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
+    "electron-log": "^5.3.0",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.3.9",
     "express": "^4.21.2",
@@ -54,11 +55,15 @@
   "build": {
     "appId": "com.xe-web-crm.app",
     "productName": "XEWebCRM",
-    "publish": [{
-      "provider": "github",
-      "owner": "vinhnk",
-      "repo": "test_auto_updater"
-    }],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "vinhnk",
+        "repo": "test_auto_updater",
+        "private": false,
+        "releaseType": "release"
+      }
+    ],
     "directories": {
       "output": "release/"
     },
@@ -68,9 +73,14 @@
     ],
     "win": {
       "target": [
-        "nsis"
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
       ],
-      "icon": "src/assets/icon.ico"
+      "icon": "src/assets/icon.ico",
+      "artifactName": "${productName}-Setup-${version}.${ext}",
+      "publisherName": "XEVN"
     },
     "nsis": {
       "oneClick": false,
